kubernetes/templates/service.tmpl.yaml
apiVersion: v1
kind: Service
metadata:
  name: ${PROJECT_NAME}-loadbalancer-service
  namespace: ${NAMESPACE}
spec:
  type: LoadBalancer
  ports:
    - port: 80
      name: load-balancer-port
      targetPort: nginx-port
  selector:
    app: ${PROJECT_NAME}
